@@ -140,15 +140,15 @@ namespace libtorrent
 		else params.flags &= ~add_torrent_params::flag_paused;
 
 		error_code ec;
-		std::string display_name = url_has_argument(uri, "dn");
-		if (!display_name.empty()) params.name = unescape_string(display_name.c_str(), ec);
-		std::string tracker_string = url_has_argument(uri, "tr");
-		if (!tracker_string.empty()) params.trackers.push_back(unescape_string(tracker_string.c_str(), ec));
+		string_view display_name = url_has_argument(uri, "dn");
+		if (!display_name.empty()) params.name = unescape_string(display_name, ec);
+		string_view tracker_string = url_has_argument(uri, "tr");
+		if (!tracker_string.empty()) params.trackers.push_back(unescape_string(tracker_string, ec));
 
-		std::string btih = url_has_argument(uri, "xt");
+		string_view btih = url_has_argument(uri, "xt");
 		if (btih.empty()) return torrent_handle();
 
-		if (btih.compare(0, 9, "urn:btih:") != 0) return torrent_handle();
+		if (btih.substr(0, 9) != "urn:btih:") return torrent_handle();
 
 		if (btih.size() == 40 + 9) aux::from_hex({&btih[9], 40}, params.info_hash.data());
 		else params.info_hash.assign(base32decode(btih.substr(9)).c_str());
@@ -167,21 +167,20 @@ namespace libtorrent
 #endif // BOOST_NO_EXCEPTIONS
 #endif // TORRENT_NO_DEPRECATE
 
-	// TODO: 3 take string_view here instead
-	void parse_magnet_uri(std::string const& uri, add_torrent_params& p, error_code& ec)
+	void parse_magnet_uri(string_view uri, add_torrent_params& p, error_code& ec)
 	{
 		ec.clear();
 		std::string name;
 
 		{
 			error_code e;
-			std::string display_name = url_has_argument(uri, "dn");
-			if (!display_name.empty()) name = unescape_string(display_name.c_str(), e);
+			string_view display_name = url_has_argument(uri, "dn");
+			if (!display_name.empty()) name = unescape_string(display_name, e);
 		}
 
 		// parse trackers out of the magnet link
-		std::string::size_type pos = std::string::npos;
-		std::string url = url_has_argument(uri, "tr", &pos);
+		auto pos = std::string::npos;
+		string_view url = url_has_argument(uri, "tr", &pos);
 		int tier = 0;
 		while (pos != std::string::npos)
 		{
@@ -191,14 +190,14 @@ namespace libtorrent
 				p.tracker_tiers.resize(p.trackers.size(), 0);
 
 			error_code e;
-			url = unescape_string(url, e);
+			std::string tracker = unescape_string(url, e);
 			if (e) continue;
-			p.trackers.push_back(url);
+			p.trackers.push_back(std::move(tracker));
 			p.tracker_tiers.push_back(tier++);
-			pos = uri.find("&tr=", pos);
+			pos = find(uri, "&tr=", pos);
 			if (pos == std::string::npos) break;
 			pos += 4;
-			url = uri.substr(pos, uri.find('&', pos) - pos);
+			url = uri.substr(pos, find(uri, "&", pos) - pos);
 		}
 
 		// parse web seeds out of the magnet link
@@ -207,30 +206,30 @@ namespace libtorrent
 		while (pos != std::string::npos)
 		{
 			error_code e;
-			url = unescape_string(url, e);
+			std::string webseed = unescape_string(url, e);
 			if (e) continue;
-			p.url_seeds.push_back(url);
-			pos = uri.find("&ws=", pos);
+			p.url_seeds.push_back(std::move(webseed));
+			pos = find(uri, "&ws=", pos);
 			if (pos == std::string::npos) break;
 			pos += 4;
-			url = uri.substr(pos, uri.find('&', pos) - pos);
+			url = uri.substr(pos, find(uri, "&", pos) - pos);
 		}
 
-		std::string btih = url_has_argument(uri, "xt");
+		string_view btih = url_has_argument(uri, "xt");
 		if (btih.empty())
 		{
 			ec = errors::missing_info_hash_in_uri;
 			return;
 		}
 
-		if (btih.compare(0, 9, "urn:btih:") != 0)
+		if (btih.substr(0, 9) != "urn:btih:")
 		{
 			ec = errors::missing_info_hash_in_uri;
 			return;
 		}
 
 		std::string::size_type peer_pos = std::string::npos;
-		std::string peer = url_has_argument(uri, "x.pe", &peer_pos);
+		string_view peer = url_has_argument(uri, "x.pe", &peer_pos);
 		while (!peer.empty())
 		{
 			error_code e;
@@ -238,29 +237,29 @@ namespace libtorrent
 			if (!e)
 				p.peers.push_back(endp);
 
-			peer_pos = uri.find("&x.pe=", peer_pos);
+			peer_pos = find(uri, "&x.pe=", peer_pos);
 			if (peer_pos == std::string::npos) break;
 			peer_pos += 6;
-			peer = uri.substr(peer_pos, uri.find('&', peer_pos) - peer_pos);
+			peer = uri.substr(peer_pos, find(uri, "&", peer_pos) - peer_pos);
 		}
 
 #ifndef TORRENT_DISABLE_DHT
 		std::string::size_type node_pos = std::string::npos;
-		std::string node = url_has_argument(uri, "dht", &node_pos);
+		string_view node = url_has_argument(uri, "dht", &node_pos);
 		while (!node.empty())
 		{
 			std::string::size_type divider = node.find_last_of(':');
 			if (divider != std::string::npos)
 			{
-				int port = atoi(node.c_str() + divider + 1);
+				int port = atoi(node.substr(divider + 1).to_string().c_str());
 				if (port != 0)
-					p.dht_nodes.push_back(std::make_pair(node.substr(0, divider), port));
+					p.dht_nodes.push_back(std::make_pair(node.substr(0, divider).to_string(), port));
 			}
 
-			node_pos = uri.find("&dht=", node_pos);
+			node_pos = find(uri, "&dht=", node_pos);
 			if (node_pos == std::string::npos) break;
 			node_pos += 5;
-			node = uri.substr(node_pos, uri.find('&', node_pos) - node_pos);
+			node = uri.substr(node_pos, find(uri, "&", node_pos) - node_pos);
 		}
 #endif
 
