@@ -34,6 +34,7 @@ POSSIBILITY OF SUCH DAMAGE.
 #include "setup_transfer.hpp"
 #include "libtorrent/socket_io.hpp"
 #include "libtorrent/socket.hpp"
+#include "libtorrent/aux_/escape_string.hpp" // for trim
 
 #include <string>
 
@@ -115,9 +116,28 @@ TORRENT_TEST(parse_invalid_ipv4_endpoint)
 	TEST_CHECK(ec);
 	ec.clear();
 
+	endp = parse_endpoint("127.0.0.1:-4", ec);
+	TEST_CHECK(ec);
+	ec.clear();
+
+	endp = parse_endpoint("127.0.0.1:66000", ec);
+	TEST_CHECK(ec);
+	ec.clear();
+
+	endp = parse_endpoint("127.0.0.1:abc", ec);
+	TEST_CHECK(ec);
+	ec.clear();
+
 	endp = parse_endpoint("127.0.0.1", ec);
 	TEST_CHECK(ec);
 	ec.clear();
+
+#ifndef TORRENT_WINDOWS
+	// it appears windows siliently accepts truncated IP addresses
+	endp = parse_endpoint("127.0.0:123", ec);
+	TEST_CHECK(ec);
+	ec.clear();
+#endif
 
 	endp = parse_endpoint("127.0.0.1:", ec);
 	TEST_CHECK(ec);
@@ -126,10 +146,21 @@ TORRENT_TEST(parse_invalid_ipv4_endpoint)
 	endp = parse_endpoint("127.0.0.1X", ec);
 	TEST_CHECK(ec);
 	ec.clear();
+}
 
-	endp = parse_endpoint("127.0.0.1:4", ec);
+TORRENT_TEST(parse_valid_ip4_endpoint)
+{
+	error_code ec;
+	TEST_EQUAL(parse_endpoint("127.0.0.1:4", ec), ep("127.0.0.1", 4));
 	TEST_CHECK(!ec);
-	TEST_EQUAL(endp, ep("127.0.0.1", 4));
+	ec.clear();
+
+	TEST_EQUAL(parse_endpoint("\t 127.0.0.1:4 \n", ec), ep("127.0.0.1", 4));
+	TEST_CHECK(!ec);
+	ec.clear();
+
+	TEST_EQUAL(parse_endpoint("127.0.0.1:23", ec), ep("127.0.0.1", 23));
+	TEST_CHECK(!ec);
 	ec.clear();
 }
 
@@ -155,9 +186,44 @@ TORRENT_TEST(parse_invalid_ipv6_endpoint)
 	TEST_CHECK(ec);
 	ec.clear();
 
-	endp = parse_endpoint("[::1]:4", ec);
+	endp = parse_endpoint("[::1", ec);
+	TEST_CHECK(ec == errors::expected_close_bracket_in_address);
+	ec.clear();
+
+	parse_endpoint("[ff::1:5", ec);
+	TEST_EQUAL(ec, error_code(errors::expected_close_bracket_in_address));
+	ec.clear();
+
+	endp = parse_endpoint("[abcd]:123", ec);
+	TEST_CHECK(ec);
+	ec.clear();
+
+	endp = parse_endpoint("[ff::1]", ec);
+	TEST_EQUAL(ec, error_code(errors::invalid_port));
+	ec.clear();
+}
+
+TORRENT_TEST(parse_valid_ipv6_endpoint)
+{
+	error_code ec;
+	TEST_EQUAL(parse_endpoint("[::1]:4", ec), ep("::1", 4));
 	TEST_CHECK(!ec);
-	TEST_EQUAL(endp, ep("::1", 4));
+	ec.clear();
+
+	TEST_EQUAL(parse_endpoint(" \t[ff::1]:1214 \r", ec), ep("ff::1", 1214));
+	TEST_CHECK(!ec);
 	ec.clear();
 }
 #endif
+
+TORRENT_TEST(trim)
+{
+	TEST_EQUAL(trim(" a"), "a");
+	TEST_EQUAL(trim(" a "), "a");
+	TEST_EQUAL(trim("\t \na \t\r"), "a");
+	TEST_EQUAL(trim(" \t \ta"), "a");
+	TEST_EQUAL(trim("a "), "a");
+	TEST_EQUAL(trim("a \t"), "a");
+	TEST_EQUAL(trim("a \t\n \tb"), "a \t\n \tb");
+}
+
